Osien otsikot piiloon jos ei ole näytettävää

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -6,7 +6,7 @@
 
     <h2>{{ tutkinto | lokalisoiKentta:'nimi' }}</h2>
 
-    <h3 translate="osien-valinta.pakolliset_osat"></h3>
+    <h3 ng-if="(tutkinnonosat | filter: {pakollinen: true}).length" translate="osien-valinta.pakolliset_osat"></h3>
     <div ng-repeat="osa in tutkinnonosat | filter: {pakollinen: true}" class="checkbox">
       <label>
         <input type="checkbox" ng-model="valinnat[osa.osatunnus]" ng-click="isValinnatempty()">
@@ -14,7 +14,7 @@
       </label>
     </div>
 
-    <h3 translate="osien-valinta.valinnaiset_osat"></h3>
+    <h3 ng-if="(tutkinnonosat | filter: {pakollinen: false}).length" translate="osien-valinta.valinnaiset_osat"></h3>
     <div ng-repeat="osa in tutkinnonosat | filter: {pakollinen: false}">
       <label>
         <input type="checkbox" ng-model="valinnat[osa.osatunnus]" ng-click="isValinnatempty()">
