OPH-1346. Ohjetoiminnon tyyliy

--- a/app/frontend/src/sass/partials/_mediaquery.scss
+++ b/app/frontend/src/sass/partials/_mediaquery.scss
@@ -32,6 +32,10 @@
   .pagination li:first-child a {
     padding-left: 33px;
   }
+  .ohje .ohje-popup {
+    width: 315px;
+    font-size: 0.85714285714286em;
+  }
 }
 
 @media only screen and (max-width: 480px) {
