OPH-1345: Palaa arviointiin

--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -28,4 +28,14 @@
       </section>
     </section>
   </div>
+  <div class="panel-footer">
+    <div class="row">
+      <div class="col-md-12">
+        <button class="btn btn-primary pull-left" role="button" ng-click="palaaArviointiin()">
+          <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
+          Arvioi osaaminen
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
