OPH-1345: Näytä tutkinnon nimi

--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <h3 class="panel-title">Arvioi osaamisesi - Raportti</h3>
+    <h3 class="panel-title">Raportti - {{ tutkinto | lokalisoiKentta:'nimi' }}</h3>
   </div>
   <div class="panel-body">
     <section class="tutkinnonosa" ng-repeat="tutkinnonosa in tutkinnonosat">
