--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -64,10 +64,16 @@
     </div>
 
     <div class="col-md-8" style="padding: 0px;">
-        <a class="btn btn-primary pull-left e2e-haettu-tutkinto" style="width: 100%; text-align: left; margin-bottom: 5px; white-space: normal;" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}&peruste={{tutkinto.peruste_diaarinumero}}" role="button" ng-repeat="tutkinto in tutkinnot" ng-click="tyhjennaValitutOsatunnukset()">
-          {{ tutkinto | lokalisoiKentta:'nimi' }}&nbsp;({{ tutkinto | lokalisoiKentta:'opintoala_nimi' }})&nbsp;&nbsp;
+      <div class="row" ng-repeat="tutkinto in tutkinnot">
+        <a class="btn btn-primary pull-left e2e-haettu-tutkinto" style="width: 70%; text-align: left; margin-bottom: 5px; white-space: normal;" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}&peruste={{tutkinto.peruste_diaarinumero}}" role="button" ng-click="tyhjennaValitutOsatunnukset()">
+          {{ tutkinto | lokalisoiKentta:'nimi' }}&nbsp;({{tutkinto.peruste_tyyppi}}) &nbsp;&nbsp;
           <span class="glyphicon glyphicon-arrow-right pull-right" aria-hidden="true"></span>
         </a>
+        <a  style="width: 30%; text-align: left; margin-bottom: 5px; white-space: normal;" href="https://eperusteet.opintopolku.fi/#/fi/esitys/{{tutkinto.peruste_eperustetunnus}}/{{tutkinto.peruste_tyyppi}}/tiedot" role="button" target="blank">
+          Perusteet ePerusteet-järjestelmässä
+          <span class="glyphicon glyphicon-arrow-right pull-right" aria-hidden="true"></span>
+        </a>
+      </div>
     </div>
   </div>
 </div>
