--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -1,6 +1,8 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <h3 class="panel-title">Raportti - {{ tutkinto | lokalisoiKentta:'nimi' }}</h3>
+    <h3 class="panel-title">
+      Raportti - {{ tutkinto | lokalisoiKentta:'koulutusala_nimi' }} - {{ tutkinto | lokalisoiKentta:'opintoala_nimi' }} - {{ tutkinto | lokalisoiKentta:'nimi' }}
+    </h3>
   </div>
   <div class="panel-body">
     <section class="tutkinnonosa" ng-repeat="tutkinnonosa in tutkinnonosat">
