--- a/app/frontend/src/sass/partials/_base.scss
+++ b/app/frontend/src/sass/partials/_base.scss
@@ -71,9 +71,9 @@ footer {
   height: 100%;
   margin-right: 10px;
   margin-left: 20px;
-  background: transparent url("../img/turre.svg") 0 center no-repeat;
+  background: transparent url("../img/OPH-Ossi-logo.svg") 0 center no-repeat;
   .no-svg & {
-    background-image: url("../img/turre.png");
+    background-image: url("../img/OPH-Ossi-logo..png");
   }
 }
 
