--- a/app/frontend/src/sass/yhteiset/_theme.scss
+++ b/app/frontend/src/sass/yhteiset/_theme.scss
@@ -5,11 +5,11 @@ $darker-gray: darken($gray-color, 20%);
 $darkest-gray: darken($gray-color, 40%);
 
 
-$primary-color: #4B90A6;
-$lighter-primary: #77aec0;
-$lightest-primary: #a9d6e0;
-$darker-primary: #3e798b;
-$darkest-primary: #335b6c;
-$disabled-primary-color: #a1d8ea;
+$primary-color: #399222;
+$lighter-primary: #48b62b;
+$lightest-primary: #6cc555;
+$darker-primary: #2b6d1a;
+$darkest-primary: #1c4911;
+$disabled-primary-color: #58804d;
 
 $primary-action-text: white;
