--- a/app/frontend/src/template/direktiivit/eperusteet-linkki.html
+++ b/app/frontend/src/template/direktiivit/eperusteet-linkki.html
@@ -1,9 +1,11 @@
 <div class="eperusteet">
   <!-- TODO: Käännkökset -->
-  <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/tiedot" role="button" target="blank">
-    Perusteet ePerusteet-järjestelmässä
-  </a>
-  <a href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" role="button" target="blank">
+  <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/tiedot" class="btn btn-link btn-xs" role="button" target="blank" title="Katso tutkinnon perusteet ePerusteet-järjestelmässä">
+    Perusteet
+    <span class="glyphicon bitmap icon-eperuste" aria-hidden="true"></span>
+  </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <a href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" class="btn btn-link btn-xs" role="button" target="blank">
     Näyttötutkintojen järjestäjät
+    <span class="glyphicon bitmap icon-nayttotutkintohaku" aria-hidden="true"></span>
   </a>
 </div>
