--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -62,15 +62,16 @@
       </div>
     </div>
 
-    <div class="col-md-8" style="padding: 0px;">
-      <div class="row" ng-repeat="tutkinto in tutkinnot">
-        <a class="btn btn-primary pull-left e2e-haettu-tutkinto" style="width: 70%; text-align: left; margin-bottom: 5px; white-space: normal;" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}&peruste={{tutkinto.peruste_diaarinumero}}" role="button" ng-click="tyhjennaValitutOsatunnukset()">
-          {{ tutkinto | lokalisoiKentta:'nimi' }}&nbsp;({{tutkinto.peruste_tyyppi}}) &nbsp;&nbsp;
+    <div class="list-group">
+        <a ng-repeat="tutkinto in tutkinnot" class="list-group-item e2e-haettu-tutkinto" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}&peruste={{tutkinto.peruste_diaarinumero}}" role="button" ng-click="tyhjennaValitutOsatunnukset()">
+          <h4 class="list-group-item-heading pull-left">{{ tutkinto | lokalisoiKentta:'nimi' }}&nbsp;({{tutkinto.peruste_tyyppi}})</h4> &nbsp;&nbsp;
           <span class="glyphicon glyphicon-arrow-right pull-right" aria-hidden="true"></span>
+          <p class="list-group-item-text">
+            <eperusteet-linkki kieli="{{kieli}}" eperustetunnus="{{tutkinto.peruste_eperustetunnus}}" eperustetyyppi="{{tutkinto.peruste_tyyppi}}" tutkintotunnus="{{tutkinto.tutkintotunnus}}"></eperusteet-linkki>
+          </p>
         </a>
-        <eperusteet-linkki kieli="{{kieli}}" eperustetunnus="{{tutkinto.peruste_eperustetunnus}}" eperustetyyppi="{{tutkinto.peruste_tyyppi}}" tutkintotunnus="{{tutkinto.tutkintotunnus}}"></eperusteet-linkki>
-      </div>
     </div>
+
   </div>
 </div>
 
