OPH-1368 tutkintotason perusteella suodattaminen tutkintohaussa etusivulla. Automaattitesti tietokantahaulle.

--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -43,19 +43,19 @@
         <strong style="margin-bottom: -10px;">Tutkintotyyppi</strong>
         <div class="radio" style="margin-top: 0;">
           <label>
-            <input type="radio" ng-model="tutkintotyyppi" name="tutkintotyyppi" value="erikoisammattitutkinto" checked>
+            <input type="radio" ng-model="haku.tutkintotyyppi" name="tutkintotyyppi" value="erikoisammattitutkinto" checked>
             Erikoisammattitutkinto
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" ng-model="tutkintotyyppi" name="tutkintotyyppi" value="perustutkinto">
+            <input type="radio" ng-model="haku.tutkintotyyppi" name="tutkintotyyppi" value="perustutkinto">
             Perustutkinto
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" ng-model="tutkintotyyppi" name="tutkintotyyppi" value="ammattitutkinto">
+            <input type="radio" ng-model="haku.tutkintotyyppi" name="tutkintotyyppi" value="ammattitutkinto">
             Ammattitutkinto
           </label>
         </div>
