--- a/app/frontend/src/template/direktiivit/eperusteet-linkki.html
+++ b/app/frontend/src/template/direktiivit/eperusteet-linkki.html
@@ -1,11 +1,11 @@
 <div class="eperusteet">
   <!-- TODO: Käännkökset -->
-  <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/tiedot" class="btn btn-link btn-xs" role="button" target="blank" title="Katso tutkinnon perusteet ePerusteet-järjestelmässä">
-    Perusteet
+  <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/tiedot" target="blank">
     <span class="glyphicon bitmap icon-eperuste" aria-hidden="true"></span>
-  </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" class="btn btn-link btn-xs" role="button" target="blank">
-    Näyttötutkintojen järjestäjät
+    Katso tutkinnon perusteet ePerusteet-järjestelmässä
+  </a><br />
+  <a href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" target="blank">
     <span class="glyphicon bitmap icon-nayttotutkintohaku" aria-hidden="true"></span>
+    Katso näyttötutkintojen järjestäjät
   </a>
 </div>
