--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -41,9 +41,16 @@
         </div>
 
         <strong style="margin-bottom: -10px;">Tutkintotyyppi</strong>
+
         <div class="radio" style="margin-top: 0;">
           <label>
-            <input type="radio" ng-model="haku.tutkintotyyppi" name="tutkintotyyppi" value="erikoisammattitutkinto" checked>
+            <input type="radio" ng-model="haku.tutkintotyyppi" name="tutkintotyyppi" value="null" ng-checked="true">
+            Kaikki
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" ng-model="haku.tutkintotyyppi" name="tutkintotyyppi" value="erikoisammattitutkinto">
             Erikoisammattitutkinto
           </label>
         </div>
@@ -62,7 +69,7 @@
       </div>
     </div>
 
-    <div class="list-group">
+    <div class="list-group" style="margin-top: 10px;">
         <a ng-repeat="tutkinto in tutkinnot" class="list-group-item e2e-haettu-tutkinto" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}&peruste={{tutkinto.peruste_diaarinumero}}" role="button" ng-click="tyhjennaValitutOsatunnukset()">
           <h4 class="list-group-item-heading pull-left">{{ tutkinto | lokalisoiKentta:'nimi' }}&nbsp;({{tutkinto.peruste_tyyppi}})</h4> &nbsp;&nbsp;
           <span class="glyphicon glyphicon-arrow-right pull-right" aria-hidden="true"></span>
