Kaikki -valinta tutkintotyypin valintaan

--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -44,7 +44,7 @@
 
         <div class="radio" style="margin-top: 0;">
           <label>
-            <input type="radio" ng-model="haku.tutkintotyyppi" name="tutkintotyyppi" value="null" ng-checked="true">
+            <input type="radio" ng-model="haku.tutkintotyyppi" name="tutkintotyyppi" value="kaikki" ng-checked="true">
             Kaikki
           </label>
         </div>
