OPH-1367 tutkintojen suodatus voimaantulevien ja voimassaolevien osalta etusivulla.

--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -35,7 +35,7 @@
 
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="naytavoimaantulevat" value="false">
+            <input type="checkbox" ng-model="haku.voimaantulevat" name="voimaantulevat" value="false">
             Näytä myös voimaantulevat
           </label>
         </div>
