Tutkintoja ei löytynyt -ilmoitus

--- a/app/frontend/src/sass/yhteiset/_bootstrap.scss
+++ b/app/frontend/src/sass/yhteiset/_bootstrap.scss
@@ -16,6 +16,10 @@ input[type="radio"], input[type="checkbox"] {
   line-height: 1.8em !important;
 }
 
+a.list-group-item {
+  margin-bottom: 7px;
+}
+
 // Override Bootstrap variables here (defaults from bootstrap-sass v3.3.4):
 
 //
