Kielikäännöksiä etusivulle ja yleisiä

--- a/app/frontend/src/template/direktiivit/eperusteet-linkki.html
+++ b/app/frontend/src/template/direktiivit/eperusteet-linkki.html
@@ -1,11 +1,10 @@
 <div class="eperusteet">
-  <!-- TODO: Käännkökset -->
   <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/tiedot" target="blank">
     <span class="glyphicon bitmap icon-eperuste" aria-hidden="true"></span>
-    Katso tutkinnon perusteet ePerusteet-järjestelmässä
+    {{ 'tutkinto.eperusteet_linkki' | translate }}
   </a><br />
   <a href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" target="blank">
     <span class="glyphicon bitmap icon-nayttotutkintohaku" aria-hidden="true"></span>
-    Katso näyttötutkintojen järjestäjät
+    {{ 'tutkinto.nayttotutkintojenjarjestajat_linkki' | translate }}
   </a>
 </div>
